fix: adjusts position of zoom buttons on mobile

--- a/src/features/projectsV2/ProjectsMap/ProjectsMap.module.scss
+++ b/src/features/projectsV2/ProjectsMap/ProjectsMap.module.scss
@@ -82,11 +82,11 @@
 }
 
 .android :global(.maplibregl-control-container .maplibregl-ctrl-bottom-right) {
-  bottom: 85px;
+  bottom: 105px;
 }
 
 .ios :global(.maplibregl-control-container .maplibregl-ctrl-bottom-right) {
-  bottom: 150px;
+  bottom: 130px;
 }
 
 // Plant Location Styles
